# nebula

./: .gitignore
beam/: README.md  gleam.toml  manifest.toml
beam/src/: beam.gleam  nebula_beam.gleam
beam/src/handlers/: ping.gleam
beam/src/listeners/: manager.gleam
beam/src/ws/: app.gleam  auth.gleam  manager.gleam  realm.gleam  server.gleam  subscribe.gleam
beam/src/ws/listeners/: events.gleam
beam/src/ws/realm/: events.gleam
core/: Cargo.toml  migrate.py
core/integration/: Cargo.toml
core/integration/tests/: client.rs  lib.rs
core/integration/tests/integration/: auth.rs  event.rs  mod.rs  realm.rs  schedule.rs  task.rs
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20250914_040704_create_users.rs  m20250914_195455_create_realms.rs  m20250919_202303_create_realm_members.rs  m20250921_015955_create_realm_events.rs  m20250926_032701_create_realm_tasks.rs
core/requests/: account.http  http-client.env.json
core/server/: Cargo.toml
core/server/src/: lib.rs  main.rs
core/server/src/cableway/: auth.rs  mod.rs
core/server/src/cableway/events/: calendar.rs  mod.rs
core/server/src/data/: permissions.rs
core/server/src/database/: mod.rs
core/server/src/schema/: realm_members.rs  realms.rs
core/server/src/service/: auth.rs  mod.rs  realm.rs  schedule.rs
core/server/src/web/routing/: dto.rs  error.rs  mod.rs
core/server/src/web/routing/auth/: login.rs  mod.rs  signup.rs
core/server/src/web/routing/middlewares/: auth.rs  membership.rs  mod.rs
core/server/src/web/routing/realms/: create.rs  mod.rs
core/server/src/web/routing/realms/calendar/: occurrences.rs
core/server/src/web/routing/realms/task/: mod.rs
core/server/src/web/routing/users/: mod.rs  status.rs
core/src/: app.rs  lib.rs  main.rs
core/src/cableway/: mod.rs
core/src/cableway/events/: calendar.rs
core/src/data/: calendar.rs  mod.rs  permissions.rs  snowflake.rs
core/src/database/: mod.rs
core/src/schema/: mod.rs  realm_events.rs  realm_members.rs  realm_tasks.rs  realms.rs  users.rs
core/src/service/: snowflake.rs
core/src/util/: validation.rs
core/src/web/: mod.rs
core/src/web/routing/: auth.rs  dto.rs  error.rs  mod.rs
core/src/web/routing/auth/: login.rs  mod.rs  signup.rs
core/src/web/routing/middlewares/: auth.rs  membership.rs  mod.rs  validation.rs
core/src/web/routing/realms/: create.rs  mod.rs
core/src/web/routing/realms/calendar/: events.rs  mod.rs  occurrences.rs
core/src/web/routing/realms/task/: mod.rs
core/src/web/routing/users/: mod.rs
core/target-tests/: .rustc_info.json
core/tests/: client.rs  integration_tests.rs
core/tests/integration/: auth.rs  event.rs  mod.rs  task.rs
website/: package-lock.json  package.json
website/src/: app.html  hooks.ts
website/src/lib/api/: api.ts  auth.ts  realm.ts  user.ts
website/src/lib/components/: Modal.svelte  ModalInput.svelte  Tooltip.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/(auth)/: +layout.svelte
website/src/routes/(auth)/login/: +page.svelte
website/src/routes/app/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
website/src/routes/app/[...segments]/: +page.server.ts
website/src/routes/app/realm/[realm_id]/: +layout.server.ts  +layout.svelte  +page.server.ts
website/src/routes/app/realm/[realm_id]/calendar/: +page.svelte
website/src/routes/ws/: +page.svelte
