[package]
name = "nebula_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
headers = "0.4.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
tower = { version = "0.5.2", features = ["util"]}
tower-http = { version = "0.6.6", features = ["trace", "add-extension", "cors", "fs", "auth"]}
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
http-body-util = "0.1.3"
chrono = "^0.4"
crossbeam = "0.8.4"
dashmap = "6.1.0"
async-trait = "^0.1"

prost = "^0.14"
prost-types="^0.14"
prost-build="^0.14"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

tokio-postgres = "0.7.13"

dotenvy= "0.15.7"
jwt= "0.16.0"
hmac= "0.12.1"
sha2= "0.10.9"
argon2 = "0.5.3"
rand = "0.9.2"

sea-orm = { version = "2.0.0-rc.6", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"]  }
sea-query = "1.0.0-rc.12"
sea-orm-migration = "1.1.16"

async-nats = "0.42.0"
bytes = "1.10.1"
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-tracing = { version = "0.5.8", features = ["tracing-opentelemetry_0_31_pkg"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
tokio-test = "0.4"
