[package]
name = "nebula_core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"]}
tower-http = { version = "0.6.6", features = ["trace", "add-extension", "cors", "fs", "auth"]}
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
chrono = "^0.4"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

dotenvy= "0.15.7"
jwt= "0.16.0"
hmac= "0.12.1"
sha2= "0.10.9"
argon2 = "0.5.3"
garde = { version = "0.22.0", features = ["full"] }

sea-orm = { version = "=2.0.0-rc.8", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "sqlite-use-returning-for-3_35"
]  }
sea-query = "1.0.0-rc.12"
sea-orm-migration = "=2.0.0-rc.8"

async-nats = "0.43.0"
bytes = "1.10.1"
async-std = { version = "1.13.2", features = ["attributes", "tokio1"] }
migration = { path = "./migration" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-tracing = { version = "0.5.8", features = ["tracing-opentelemetry_0_31_pkg"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
tokio-test = "0.4"