[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
nebula_server = { path = "../server" }
reqwest = { workspace = true }
reqwest-tracing = { workspace = true }
reqwest-middleware = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rrule = { workspace = true }
