[package]
name = "nebula_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

dotenvy = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
garde = { workspace = true }

sea-orm = { workspace = true }
sea-query = { workspace = true }
sea-orm-migration = { workspace = true }

async-nats = { workspace = true }
bytes = { workspace = true }
async-std = { workspace = true }
migration = { path = "../migration" }
rrule = { workspace = true }

[lib]
name = "nebula_server"

[[bin]]
name = "nebula_server"
path = "src/main.rs"
